@@ -47,6 +47,7 @@ OTHER CONTRIBUTORS
 	Albrecht Schlosser
         Andrea Suatoni
 	Paul Sydney
+	Aaron Ucko
 	Emanuele Vicentini
 	Jim Wilson
 	Ken Yarnall
