@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.1.4
 
+	- FLUID didn't write color/selection_color() calls using
+	  the symbolic names when possible, nor did it cast
+	  integer colors to Fl_Color (STR #146)
 	- Fl_File_Chooser was very close for multiple file
 	  selection in large directories (STR #140)
 	- Fl_Text_Display/Editor did not disable the current
